# approx-pack-schedule

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
configs/: packing1d_scale.yaml  packing1d_small.yaml  packing2d_scale.yaml  packing2d_small.yaml  sched_identical_scale.yaml  sched_identical_small.yaml  sched_unrelated_scale.yaml  sched_unrelated_small.yaml
scripts/: bench_orlib_packing1d.py  bench_packing1d.py  bench_packing2d.py  bench_sched_identical.py  bench_sched_unrelated.py  download_orlib_1d.py  plot_experiments.py  plot_orlib_packing1d.py  plot_packing1d.py  plot_packing2d.py  plot_sched_identical.py  plot_sched_unrelated.py  run_experiments.py  run_packing1d.py  run_sched_identical.py  run_sched_unrelated.py
src/apsuite/common/: metrics.py  types.py
src/apsuite/experiments/: io.py  registry.py
src/apsuite/packing1d/: algorithms.py  instances.py  local_search.py  lower_bounds.py  orlib_parser.py  validate.py
src/apsuite/packing2d/: algorithms.py  guillotine.py  instances.py  lower_bounds.py  shelf.py  types.py  validate.py
src/apsuite/scheduling/identical/: algorithms.py  instances.py  lower_bounds.py  types.py
src/apsuite/scheduling/unrelated/: algorithms.py  (+6 more)
tests/: test_orlib_parser.py  test_packing1d_algorithms.py  test_packing1d_bounds.py  test_packing1d_hybrid.py  test_packing1d_local_search.py  test_packing2d_guillotine.py  test_packing2d_hybrid.py  test_packing2d_shelf.py  test_sched_identical.py  test_sched_unrelated_greedy.py  test_sched_unrelated_lp.py  test_sched_unrelated_lp_info.py  test_sched_unrelated_rounding.py
